# FocusFlow

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 168edb5249e1_initial_migration.py  17b254a9e168_initial.py  bbd11880a237_refactor_models_and_fix_uuid_types.py  bbe35dd80566_update_focussession.py  fca591d11595_update_table.py
src/api/: dependencies.py  focus_session.py  rooms.py  users.py
src/core/: config.py  security.py
src/db/: database.py  redis.py
src/models/: __init__.py  focus_session.py  room.py  session_participant.py  user.py
src/schemas/: focus_session.py  room.py  session_participant.py  user.py
src/services/: focus_session_services.py  room_services.py  user_services.py
tests/: conftest.py  test_healthcheck.py  test_users.py
